# Thesis

./: BACKSCAT_500.txt  CMakeLists.txt  COLLISON_1000.txt  action.cc  action.hh  construction.cc  construction.hh  detector.cc  detector.hh  generator.cc  generator.hh  generatorMessenger.cc  generatorMessenger.hh  histo.py  mysteppingaction.cc  mysteppingaction.hh  physics.cc  physics.hh  plots.IPYNB  pyvenv.cfg  requirements.txt  run.mac  runaction.cc  runaction.hh  thesis.cc  txtfix.py  vis.mac
SRIM/: BACKSCAT_100.txt  BACKSCAT_1000.txt  BACKSCAT_1000_1deg_NICER.txt  BACKSCAT_1000_1deg_NICER_cast.txt  BACKSCAT_100_1deg_NICER.txt  BACKSCAT_100_1deg_NICER_cast.txt  BACKSCAT_200_10deg.txt  BACKSCAT_200_1deg.txt  BACKSCAT_200_2deg.txt  BACKSCAT_200_3deg.txt  BACKSCAT_200_4deg.txt  BACKSCAT_200_5deg.txt  BACKSCAT_200_6deg.txt  BACKSCAT_200_7deg.txt  BACKSCAT_200_8deg.txt  BACKSCAT_200_9deg.txt  BACKSCAT_500.txt  BACKSCAT_500_1deg_NICER.txt  BACKSCAT_500_1deg_NICER_cast.txt
mirror_coords/: conic_mirror.scr  output_outward.scr
root/: tut1.c
